# app/Http/Controllers/Controller.php
@@ -6,8 +6,68 @@ use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 use Illuminate\Foundation\Bus\DispatchesJobs;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
+use App\Models\User;
+use App\Models\Log;
 
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
+    /**
+     * @OA\GET(
+     *     path="/api/users",
+     *     tags={"Authentication"},
+     *     summary="List all User",
+     *     description="List all User Profile",
+     *     @OA\Response(response=200, description="Success" ),
+     * )
+     */
+    function listUser() {
+        $users = User::all();
+
+        return response()->json($users, 200);
+    }
+    /**
+     * @OA\GET(
+     *     path="/api/logs",
+     *     tags={"Authentication"},
+     *     summary="list all logs",
+     *     description="list all logs",
+     *     @OA\Response(response=200, description="Success" ),
+     * )
+     */
+    function listLog() {
+        $logs = Log::all();
+
+        return response()->json($logs, 200);
+    }
+    /**
+     * @OA\GET(
+     *     path="/api/deleteUser/$id",
+     *     tags={"Authentication"},
+     *     summary="delete user",
+     *     description="delete specifi user",
+     *     @OA\Response(response=200, description="Success" ),
+     * )
+     */
+    function deleteUser($id) {
+        $user = User::find($id);
+        $user->delete();
+        return response()->json('', 200);
+    }
+    /**
+     * @OA\GET(
+     *     path="/api/log/$id/$content",
+     *     tags={"Authentication"},
+     *     summary="save log when active system",
+     *     description="",
+     *     @OA\Response(response=200, description="Success" ),
+     * )
+     */
+    function saveLog($id, $content) {
+            $log = new Log;
+            $log->content = $content;
+            $log->user_id = $id;
+            $log->save();
+            return response()->json('', 200);
+    }
 }
