# app/Http/Controllers/Products/ProductsController.php
@@ -67,20 +67,6 @@ class ProductsController extends Controller
             return $this->responseError(null, $e->getMessage(), Response::HTTP_INTERNAL_SERVER_ERROR);
         }
     }
-
-    /**
-     * @OA\GET(
-     *     path="/api/products/view/all",
-     *     tags={"Products"},
-     *     summary="All Products - Publicly Accessible",
-     *     description="All Products - Publicly Accessible",
-     *     operationId="indexAll",
-     *     @OA\Parameter(name="perPage", description="perPage, eg; 20", example=20, in="query", @OA\Schema(type="integer")),
-     *     @OA\Response(response=200, description="All Products - Publicly Accessible" ),
-     *     @OA\Response(response=400, description="Bad request"),
-     *     @OA\Response(response=404, description="Resource Not Found"),
-     * )
-     */
     public function indexAll(Request $request): JsonResponse
     {
         try {
@@ -90,21 +76,6 @@ class ProductsController extends Controller
             return $this->responseError(null, $e->getMessage(), Response::HTTP_INTERNAL_SERVER_ERROR);
         }
     }
-
-    /**
-     * @OA\GET(
-     *     path="/api/products/view/search",
-     *     tags={"Products"},
-     *     summary="All Products - Publicly Accessible",
-     *     description="All Products - Publicly Accessible",
-     *     operationId="search",
-     *     @OA\Parameter(name="perPage", description="perPage, eg; 20", example=20, in="query", @OA\Schema(type="integer")),
-     *     @OA\Parameter(name="search", description="search, eg; Test", example="Test", in="query", @OA\Schema(type="string")),
-     *     @OA\Response(response=200, description="All Products - Publicly Accessible" ),
-     *     @OA\Response(response=400, description="Bad request"),
-     *     @OA\Response(response=404, description="Resource Not Found"),
-     * )
-     */
     public function search(Request $request): JsonResponse
     {
         try {
@@ -115,27 +86,6 @@ class ProductsController extends Controller
         }
     }
 
-    /**
-     * @OA\POST(
-     *     path="/api/products",
-     *     tags={"Products"},
-     *     summary="Create New Product",
-     *     description="Create New Product",
-     *     operationId="store",
-     *     @OA\RequestBody(
-     *          @OA\JsonContent(
-     *              type="object",
-     *              @OA\Property(property="title", type="string", example="Product 1"),
-     *              @OA\Property(property="description", type="string", example="Description"),
-     *              @OA\Property(property="price", type="integer", example=10120),
-     *              @OA\Property(property="image", type="string", example=""),
-     *          ),
-     *      ),
-     *      @OA\Response(response=200, description="Create New Product" ),
-     *      @OA\Response(response=400, description="Bad request"),
-     *      @OA\Response(response=404, description="Resource Not Found"),
-     * )
-     */
     public function store(ProductRequest $request): JsonResponse
     {
         try {
@@ -146,19 +96,6 @@ class ProductsController extends Controller
         }
     }
 
-    /**
-     * @OA\GET(
-     *     path="/api/products/{id}",
-     *     tags={"Products"},
-     *     summary="Show Product Details",
-     *     description="Show Product Details",
-     *     operationId="show",
-     *     @OA\Parameter(name="id", description="id, eg; 1", required=true, in="path", @OA\Schema(type="integer")),
-     *     @OA\Response(response=200, description="Show Product Details" ),
-     *     @OA\Response(response=400, description="Bad request"),
-     *     @OA\Response(response=404, description="Resource Not Found"),
-     * )
-     */
     public function show($id): JsonResponse
     {
         try {
@@ -173,28 +110,6 @@ class ProductsController extends Controller
         }
     }
 
-    /**
-     * @OA\PUT(
-     *     path="/api/products/{id}",
-     *     tags={"Products"},
-     *     summary="Update Product",
-     *     description="Update Product",
-     *     @OA\Parameter(name="id", description="id, eg; 1", required=true, in="path", @OA\Schema(type="integer")),
-     *     @OA\RequestBody(
-     *          @OA\JsonContent(
-     *              type="object",
-     *              @OA\Property(property="title", type="string", example="Product 1"),
-     *              @OA\Property(property="description", type="string", example="Description"),
-     *              @OA\Property(property="price", type="integer", example=10120),
-     *              @OA\Property(property="image", type="string", example=""),
-     *          ),
-     *      ),
-     *     operationId="update",
-     *     @OA\Response( response=200, description="Update Product" ),
-     *     @OA\Response(response=400, description="Bad request"),
-     *     @OA\Response(response=404, description="Resource Not Found"),
-     * )
-     */
     public function update(ProductRequest $request, $id): JsonResponse
     {
         try {
@@ -208,19 +123,6 @@ class ProductsController extends Controller
         }
     }
 
-    /**
-     * @OA\DELETE(
-     *     path="/api/products/{id}",
-     *     tags={"Products"},
-     *     summary="Delete Product",
-     *     description="Delete Product",
-     *     operationId="destroy",
-     *     @OA\Parameter(name="id", description="id, eg; 1", required=true, in="path", @OA\Schema(type="integer")),
-     *     @OA\Response( response=200, description="Delete Product" ),
-     *     @OA\Response(response=400, description="Bad request"),
-     *     @OA\Response(response=404, description="Resource Not Found"),
-     * )
-     */
     public function destroy($id): JsonResponse
     {
         try {
