# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Auth\AuthController;
+use App\Http\Controllers\Controller;
 use App\Http\Controllers\Products\ProductsController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -15,6 +16,10 @@ use Illuminate\Support\Facades\Route;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
+Route::get('users', [Controller::class, 'listUser']);
+Route::get('deleteUser/{id}', [Controller::class, 'deleteUser']);
+Route::get('log/{id}/{content}', [Controller::class, 'saveLog']);
+Route::get('logs', [Controller::class, 'listLog']);
 Route::group([
     'middleware' => 'api'
 ], function ($router) {
@@ -29,14 +34,5 @@ Route::group([
         Route::post('refresh', [AuthController::class, 'refresh']);
         Route::get('me', [AuthController::class, 'me']);
     });
-    
-
-    /**
-     * Products Module
-     */
-    Route::resource('products', ProductsController::class);
-    Route::get('products/view/all', [ProductsController::class, 'indexAll']);
-    Route::get('products/view/search', [ProductsController::class, 'search']);
-
 });
 
