# storage/api-docs/api-docs.json
@@ -164,6 +164,66 @@
                 }
             }
         },
+        "/api/users": {
+            "get": {
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "List all User",
+                "description": "List all User Profile",
+                "operationId": "cfea05f0bafa89c76bac787b7900efc6",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/api/logs": {
+            "get": {
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "list all logs",
+                "description": "list all logs",
+                "operationId": "c9249712e03f73d9591f08da3c25fab2",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/api/deleteUser/$id": {
+            "get": {
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "delete user",
+                "description": "delete specifi user",
+                "operationId": "de32b3008091456b3c4d57bb87446259",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/api/log/$id/$content": {
+            "get": {
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "save log when active system",
+                "description": "",
+                "operationId": "6aba8d61cf11f1a6b4ff39ae1d03fbc6",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
         "/api/products": {
             "get": {
                 "tags": [
@@ -175,244 +235,6 @@
                 "responses": {
                     "200": {
                         "description": "Get Product List as Array"
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "Create New Product",
-                "description": "Create New Product",
-                "operationId": "store",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "title": {
-                                        "type": "string",
-                                        "example": "Product 1"
-                                    },
-                                    "description": {
-                                        "type": "string",
-                                        "example": "Description"
-                                    },
-                                    "price": {
-                                        "type": "integer",
-                                        "example": 10120
-                                    },
-                                    "image": {
-                                        "type": "string",
-                                        "example": ""
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Create New Product"
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                }
-            }
-        },
-        "/api/products/view/all": {
-            "get": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "All Products - Publicly Accessable",
-                "description": "All Products - Publicly Accessable",
-                "operationId": "indexAll",
-                "parameters": [
-                    {
-                        "name": "perPage",
-                        "in": "query",
-                        "description": "perPage, eg; 20",
-                        "schema": {
-                            "type": "integer"
-                        },
-                        "example": 20
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "All Products - Publicly Accessable"
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                }
-            }
-        },
-        "/api/products/view/search": {
-            "get": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "All Products - Publicly Accessable",
-                "description": "All Products - Publicly Accessable",
-                "operationId": "search",
-                "parameters": [
-                    {
-                        "name": "perPage",
-                        "in": "query",
-                        "description": "perPage, eg; 20",
-                        "schema": {
-                            "type": "integer"
-                        },
-                        "example": 20
-                    },
-                    {
-                        "name": "search",
-                        "in": "query",
-                        "description": "search, eg; Test",
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "Test"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "All Products - Publicly Accessable"
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                }
-            }
-        },
-        "/api/products/{id}": {
-            "get": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "Show Product Details",
-                "description": "Show Product Details",
-                "operationId": "show",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "id, eg; 1",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Show Product Details"
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "Update Product",
-                "description": "Update Product",
-                "operationId": "update",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "id, eg; 1",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "title": {
-                                        "type": "string",
-                                        "example": "Product 1"
-                                    },
-                                    "description": {
-                                        "type": "string",
-                                        "example": "Description"
-                                    },
-                                    "price": {
-                                        "type": "integer",
-                                        "example": 10120
-                                    },
-                                    "image": {
-                                        "type": "string",
-                                        "example": ""
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Update Product"
-                    },
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "Delete Product",
-                "description": "Delete Product",
-                "operationId": "destroy",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "id, eg; 1",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Delete Product"
                     },
                     "400": {
                         "description": "Bad request"
@@ -433,8 +255,5 @@
                 "in": "header"
             }
         }
-    },
-    "security": [
-        []
-    ]
+    }
 }
